src/main/java/lexical/test/passing/emtpystring.ru
""

/? CORRECTO: ANALISIS LEXICO
/? | TOKEN | LEXEMA | NUMERO DE LINEA (NUMERO DE COLUMNA) |
/? | STRING_LITERAL |  | 1 (1) |