src/main/java/lexical/test/failing/06.ru
'ab'

/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 3 | Caracter invalido: ab |